[project]
name = "mcnptools"
dynamic = ["version"]
description = "tools for manipulating mcnp output"
readme = "README.md"
requires-python = ">=3.8"
authors = [
	{name = "Clell J. (CJ) Solomon", email = "csolomon@lanl.gov"},
	{name = "Cameron Bates", email = "batesca@lanl.gov"},
	{name = "Joel Kulesza", email = "jkulesza@lanl.gov"}
]
maintainers = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "License :: OSI Approved :: BSD License"
]

[project.urls]
Homepage = "https://github.com/lanl/mcnptools"
Repository = "https://github.com/lanl/mcnptools.git"

[build-system]
requires = ["setuptools", "swig"]
